# Cobot_ROS

./: .gitignore  .travis.yml  README Eclipse project creation ROS  README catkin workspace layout.md  README.md  all_dependencies.md  catkin workspace layout.md  index.html  params.json  repository.rosinstall
cobot_description/: CMakeLists.txt  package.xml
cobot_description/meshes/dae/: body.dae  top.dae  ultrasoon.dae
cobot_description/meshes/stl/: body.stl  top.stl  ultrasoon.stl
cobot_description/robots/: cobot_mapping.urdf.xacro  cobot_navigation.urdf.xacro  cobot_threemxl_manual.urdf.xacro  cobot_threemxl_mapping.urdf.xacro  cobot_threemxl_navigation.urdf.xacro
cobot_description/urdf/: cobot_library.urdf.xacro  constants.urdf.xacro  test.urdf.xacro  total.urdf
cobot_description/urdf/materials/: materials.urdf.xacro
cobot_description/urdf/platform/: base.urdf.xacro  body.urdf.xacro  top.urdf.xacro
cobot_description/urdf/sensors/: kinect.urdf.xacro  ultrasoon.urdf.xacro
cobot_launch/: CMakeLists.txt  package.xml
cobot_launch/env_hooks/: cobot.em  cobot.sh.em
cobot_launch/launch/: 3dsensor.launch  cobot.launch  mapping.launch  turtlesim.launch
cobot_launch/launch/include/: base.launch.xml  common_robot.launch.xml  description.launch.xml
cobot_launch/launch/include/3dsensor/: kinect.launch.xml
cobot_launch/launch/include/threemxl/: base.launch.xml
cobot_launch/launch/include/turtle/: base.launch.xml
cobot_movement/: CMakeLists.txt  DoxygenInitial.doxyfile  package.xml
cobot_movement/include/cobot_movement/: motor_controller.h  robot_params.h  sensorHandler.h  sensorValues.h
cobot_movement/include/cobot_movement/board/: board.h  dummyBoard.h  threeMxlBoard.h  turtleBoard.h
cobot_movement/launch/: robot.launch
cobot_movement/msg/: BatteryState.msg  SensorReadings.msg
cobot_movement/src/: PWMBoardTest.cpp  motor_controller.cpp  sensorHandler.cpp
cobot_movement/src/board/: board.cpp  dummyBoard.cpp  threeMxlBoard.cpp  turtleBoard.cpp
cobot_movement/src/nodes/: motor_controllerNode.cpp  motor_controllerTurtleNode.cpp  threemxl_platformNode.cpp  turtle_platformNode.cpp
cobot_navigation/: CMakeLists.txt  package.xml
cobot_navigation/include/cobot_navigation/: laptopBatteryMonitor.h  navgoal.h  orderController.h  simpleGoal.h
cobot_navigation/launch/: cobot_automonous.launch  cobot_gmapping.launch  gmapping_temp.launch
cobot_navigation/launch/include/: amcl.launch.xml  gmapping.launch.xml  move_base.launch.xml
cobot_navigation/maps/: my_map.pgm  test.pgm  test.yaml
cobot_navigation/msg/: ArduinoOrder.msg  ArduinoOrderStatus.msg
cobot_navigation/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
cobot_navigation/src/: laptopBatteryMonitor.cpp  navgoal.cpp  orderController.cpp  testPub.cpp
cobot_navigation/src/nodes/: orderNode.cpp
cobot_teleop/: CMakeLists.txt  README.md  package.xml
cobot_teleop/include/cobot_teleop/: driver.h  gamepad_controller.h
cobot_teleop/info/: gamepad.yaml  teleop.yaml
cobot_teleop/launch/: gamepad.launch  keyboard.launch  test_driver.launch
cobot_teleop/launch/include/: driver.launch.xml  turtlesim.launch.xml
cobot_teleop/src/: driver.cpp  gamepad_controller.cpp
cobot_teleop/src/nodes/: driverNode.cpp  gamepad_controllerNode.cpp
cobot_teleop/test/: gamepad_controllerTest.cpp  gamepad_controllerTest.launch
cobot_visualise/: CMakeLists.txt  package.xml
cobot_visualise/rviz_launchers/launch/: visualise_mapping.launch  visualise_model.launch  visualise_navigation.launch  visualise_robot.launch
cobot_visualise/rviz_launchers/rviz/: mapping.rviz  model.rviz  navigation.rviz  robot.rviz
movement/: CHANGELOG.md  CMakeLists.txt  DoxygenInitial.doxyfile  package.xml
movement/documentation/html/: annotated.html  annotated_dup.js  classGamePadTeleop-members.html  classGamePadTeleop.html  classGamePadTeleop.js  classes.html  dir_0cdd1667b955f726f508381e5717a497.html  dir_0cdd1667b955f726f508381e5717a497.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  functions.html  functions_func.html  functions_vars.html  gamepad__controller_8cpp.html  gamepad__controller_8cpp.js  gamepad__controller_8h.html  gamepad__controller_8h_source.html  globals.html  globals_func.html  index.html  navtreedata.js  navtreeindex0.js
movement/documentation/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  searchdata.js  variables_1.js  variables_2.js
movement/include/movement/: PWMBoardTest.h  board.h  dummyBoard.h  gamepad_controller.h  motor_controller.h  old_motor_controller.h  robot_params.h  sensorHandler.h  sensorValues.h  threeMxlBoard.h
movement/include/movement/board/: board.h  dummyBoard.h  threeMxlBoard.h  turtleBoard.h
movement/info/: gamepad.yaml  teleop.yaml
movement/launch/: driver.launch  gamepad.launch  robot.launch
movement/src/: PWMBoardTest.cpp  board.cpp  driver.cpp  dummyBoard.cpp  gamepad_controller.cpp  gamepad_controllerNode.cpp  motor_controller.cpp  motor_controllerNode.cpp  old_motor_controller.cpp  old_motor_controllerNode.cpp  sensorHandler.cpp  threeMxlBoard.cpp
movement/src/board/: board.cpp  dummyBoard.cpp  threeMxlBoard.cpp  turtleBoard.cpp
movement/src/nodes/: driverNode.cpp  gamepad_controllerNode.cpp  motor_controllerNode.cpp  motor_controllerTurtleNode.cpp  old_motor_controllerNode.cpp
movement/test/: gamepad_controllerTest.cpp
